--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "sass": "^1.77.6",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -64,7 +65,6 @@
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.27.0",
     "gh-pages": "^3.2.3",
-    "node-sass": "^7.0.1",
     "prettier": "2.4.1",
     "typescript": "^4.5.2"
   }
